--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>React App</title>
+    <script type = "text/javascript">
+      function removeActive() {
+        var foo = document.querySelectorAll(".dropdown");
+        for (var i = 0; i < foo.length; i++) {
+          foo[i].classList.remove("active");
+        }
+      };
+ 
+      document.addEventListener( 'click', (e) => {
+
+        const div = document.querySelectorAll('.dropdown');
+        const withinBoundaries = e.composedPath().includes(div[0]);
+      
+        if ( ! withinBoundaries ) {
+          removeActive();
+        }
+      })
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
